Removed GitHub release configuration and improved exception handling in commands.